--- a/index.html
+++ b/index.html
@@ -239,8 +239,9 @@ body::after {
   </footer>
 
   <script>
-    Kakao.init('37ea916b7f1ab457b58119c60ec405a');
-    const totalImages = 6;
+    <script>
+    Kakao.init('37ea916b7f1ab457b58119c60ec4052a');
+    const totalImages = 5;
     const imageOrder = Array.from({ length: totalImages }, (_, i) => i + 1);
     let currentIndex = 0, currentVisible = 0;
     const images = [document.getElementById('img1'), document.getElementById('img2')];
@@ -269,13 +270,13 @@ body::after {
 
     function shareToKakao() {
       const num = imageOrder[currentIndex];
-      const shareUrl = `https://bluenew.life/share/${num}.html`;
-      const imageUrl = `https://bluenew.life/card/images/${num}.jpg`;
+      const shareUrl = `https://bluenew.life/sevenvisions/share/${num}.html`;
+      const imageUrl = `https://bluenew.life/sevenvisions/images/${num}.jpg`;
       Kakao.Link.sendDefault({
         objectType: 'feed',
         content: {
-          title: '이재명의 말을 들어보세요!',
-          description: '#이재명 말모이 모음 페이지',
+          title: '이재명의 비전입니다!',
+          description: '일곱가지 비전!',
           imageUrl,
           link: { mobileWebUrl: shareUrl, webUrl: shareUrl }
         }
