--- a/share/3.html
+++ b/share/3.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta property="og:title" content="이재명의 비전">  
   <meta property="og:description" content="대구 경북 7대공약">  
-  <meta property="og:image" content="/images/3.jpg">
-  <meta property="og:url" content="/share/3.html">
+  <meta property="og:image" content="https://bluenew.life/sevenvisions/images/3.jpg"> 
+  <meta property="og:url" content="https://bluenew.life/sevenvisions/share/3.html"> 
   <meta name="twitter:card" content="summary_large_image">
   <title>이재명의 말을 들어보세요!</title>
-  <meta http-equiv="refresh" content="0; url=/index.html?img=3">
+  <meta http-equiv="refresh" content="0; url=https://bluenew.life/sevenvisions/index.html?img=3">
 </head>
 <body>
   <p>공유 페이지로 이동 중입니다...</p>
